# olio-ohjelmointi

./: .gitignore
GuiData/: form2.cpp  form2.h  form2.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
GuiExample/: form2.cpp  form2.ui  mainwindow.cpp  mainwindow.ui
Maailma/: maa.h  main.cpp  monarkia.h  tasavalta.cpp  tasavalta.h
build-teht0-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-teht1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
classExample/: CMakeLists.txt  main.cpp
classExample1/: main.cpp  student.cpp  student.h
compositionExample/: dog.cpp  dog.h  main.cpp  person.cpp  person.h
esim1-main/: main.cpp
funktioharjoitus/: CMakeLists.txt  main.cpp
funktioharjoitus2/: CMakeLists.txt  main.cpp  main.cpp.autosave
inheritenceExample1/: Bear.cpp  animal.cpp  animal.h  bear.h  cat.cpp  main.cpp
kotitehtava2/: game.cpp  game.h
kotitehtava3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
kotitehtava4/: asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.h  main.cpp
kotitehtava5/: katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  main.cpp
kotitehtava6/: mainwindow.cpp  mainwindow.h  mainwindow.ui
kotitehtava7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
olioharjoitus/: CMakeLists.txt
randomExample/: CMakeLists.txt  main.cpp
teht1/: CMakeLists.txt  main.cpp
(+14 files in other folders)
